<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b6e4fc"
    tools:context=".QuestionActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="183dp"
        android:layout_height="190dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="148dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cute_student_cartoon_illustration_339032_1054__1_" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textAppearance="@style/mathmasters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/level_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:gravity="center_horizontal|top"
        android:text="@string/level"
        android:textAppearance="@style/level"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/question_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:gravity="center_horizontal|top"
        android:text="@string/_2_10"
        android:textAppearance="@style/quiz_lvl"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level_flag"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/time_remain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:gravity="center_horizontal|top"
        android:text="@string/time_remain"
        android:textAppearance="@style/time_remain"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_list" />

    <TextView
        android:id="@+id/question"
        android:layout_width="200dp"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="167dp"
        android:layout_marginBottom="348dp"
        android:gravity="center_horizontal|top"
        android:text="@string/_5_9"
        android:textAppearance="@style/question"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018" />


    <Button
        android:id="@+id/submit_btn"
        android:layout_width="173dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="OnclickSubmitBtn"
        android:text="@string/check"
        android:background="@drawable/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container"
        app:layout_constraintVertical_bias="0.505" />

    <GridLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="328dp"
        android:columnCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/optionA"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="0dp"
            android:background="@drawable/button"
            android:button="@null"
            android:gravity="center"
            android:onClick="onRadioButtonClick"
            android:outlineSpotShadowColor="#000000"
            android:shadowColor="#000000"
            android:text="@string/optiona"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/optionB"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="13.5dp"
            android:background="@drawable/button"
            android:button="@null"
            android:gravity="center"
            android:onClick="onRadioButtonClick"
            android:outlineSpotShadowColor="#000000"
            android:shadowColor="#000000"
            android:text="@string/optionb"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/optionC"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="0dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/button"
            android:button="@null"
            android:gravity="center"
            android:onClick="onRadioButtonClick"
            android:outlineSpotShadowColor="#000000"
            android:shadowColor="#000000"
            android:text="@string/optionc"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/optionD"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="13.5dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/button"
            android:button="@null"
            android:gravity="center"
            android:onClick="onRadioButtonClick"
            android:outlineSpotShadowColor="#000000"
            android:shadowColor="#000000"
            android:text="@string/optiond"
            android:textColor="@color/black"
            android:textFontWeight="700"
            android:textSize="20sp" />
    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>